03-multicontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
  namespace: roboshop
  labels:
    purpose: multi container
    project: roboshop
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
    - name: redis
      image: redis
      ports:
        - containerPort: 6379
    - name: almalinux
      image: almalinux
      command: ["sleep", "infinity"]
