08-environment.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: env-demo
spec:
  containers:
    - name: env-demo
      image: nginx
