10-pod-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ecommerce-pod-config-demo
spec:
  containers:
  - name: nginx
    image: nginx
