12-pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ecommerce-pod
spec:
  containers:
    - name: ecommerce-pod-secret
      image: nginx
