16-pod-node-port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-node-port-demo
  labels:
    project: ellamma-ecommerce
    component: frontend
    environment: dev
    purpose: node-port
spec:
  containers:
  - name: nginx
    image: nginx
