18-pod-load-balancer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-load-balancer-demo
  labels:
    project: ellamma-ecommerce
    component: frontend
    environment: dev
    purpose: load-balancer
spec:
  containers:
  - name: nginx
    image: nginx
