13-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    project: ellamma-ecommerce
    component: frontend
    environment: dev
  ports:
    - protocol: TCP
      port: 80 #service port
      targetPort: 80 #container port
