15-service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port-demo
spec:
  type: NodePort
  selector:
    project: ellamma-ecommerce
    component: frontend
    environment: dev
    purpose: node-port
  ports:
      - protocol: TCP
        port: 80 #service port
        targetPort: 80 #container port
