17-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-load-balancer-demo
spec:
  type: LoadBalancer
  selector:
    project: ellamma-ecommerce
    component: frontend
    environment: dev
    purpose: load-balancer
  ports:
      - protocol: TCP
        port: 80 #service port
        targetPort: 80 #container port
        nodePort: 30007 #by defalut the AWS EKS node port range is 30000-32767. so i kept nodeport at 30007
