20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  # replicaset labels
  labels:
    purpose: deployment
    project: headless-service-demo
spec:
  replicas: 3 #create 3 pods of replica
  selector:
    # these labels are used to select the pods
    matchLabels:
      purpose: deployment
      project: headless-service-demo
# pod definition      
  template:
    metadata:
      labels:
        purpose: deployment
        project: headless-service-demo
    spec:
      containers:
      - name: nginx
        image: nginx:trixie-perl

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  selector:
    purpose: deployment
    project: headless-service-demo
  ports:
    - protocol: TCP
      port: 80 #service port
      targetPort: 80 #container port

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-headless
spec:
  # if the service clusterIP none then it is a headless service
  clusterIP: None
  selector:
    purpose: deployment
    project: headless-service-demo
  ports:
    - protocol: TCP
      port: 80 #service port
      targetPort: 80 #container port
