22-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-accept-catalogue
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: mongodb-accept-catalogue
      namespace: default
